tests/miniJava/neg/000144_mutation.MiniJava
class java { public static class java { } Main ( String [ ] java ) { { } } }
